--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,354 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+html,
+body {
+  overflow: hidden;
+  background-color: black;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border: none;
+  outline: none;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.boxContainer {
+  position: fixed;
+  z-index: 100;
+  bottom: 20px;
+  right: 20px;
+}
+
+.theme-button {
+  border: none;
+  margin: 10px;
+  display: flex;
+  outline: none;
+  transform: rotate(2deg);
+  color: black;
+  cursor: pointer;
+  font-family: "Pixelify Sans", sans-serif;
+  align-items: center;
+  font-size: 1.4em;
+  border-radius: 3px;
+  justify-content: center;
+  padding: 10px 18px;
+  border: 2px solid black;
+  background-color: #97edb2;
+  transition: all 0.3s;
+}
+
+.theme-button:hover {
+  background-color: #46ff80;
+  box-shadow: 0px 4px 6px 3px #46ff8191;
+}
+
+.box {
+  margin: 25px;
+  background: #fff;
+  border: solid black;
+  border-color: black;
+  width: 250px;
+  border-width: 3px 3px 5px 5px;
+  border-radius: 4% 95% 6% 95%/95% 4% 92% 5%;
+  transform: rotate(-2deg);
+}
+
+.evenboxinner {
+  transform: rotate(2deg);
+  margin: 15px;
+  padding: 10px 20px;
+  background: #00a6ff;
+  border: 1px solid #222;
+  transition: all 150ms;
+  font-size: 1.4em;
+  cursor: pointer;
+  font-family: "Bangers", system-ui;
+  box-shadow: 8px 8px 0 #222;
+  float: left;
+}
+
+.evenboxinner:hover {
+  color: white;
+  background-color: red;
+  border: 1px solid #22222200;
+  box-shadow: 4px 4px 0 #00a6ff;
+}
+
+.tickIcon {
+  margin-left: 7px;
+  width: 18px;
+  height: 18px;
+}
+
+.lft {
+  position: fixed;
+  z-index: 100;
+  top: 10px;
+  right: 10px;
+  font-family: "Honk", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  font-variation-settings: "MORF" 0, "SHLN" 0;
+  font-size: 1.5em;
+  cursor: default;
+  padding: 5px 13px;
+  width: max-content;
+  background-color: rgb(255, 255, 255);
+  border-width: 5px 3px 3px 5px;
+  border-radius: 95% 4% 97% 5%/4% 94% 3% 95%;
+  border: solid black;
+  border-color: black;
+}
+
+/*  */
+
+.progress {
+  display: inline;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background-color: rgb(0, 0, 0);
+}
+
+/* loader */
+.frontLoader {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card {
+  display: inline;
+  position: relative;
+  width: 100%;
+  height: 7.5px;
+}
+
+.card span:nth-child(1) {
+  position: absolute;
+  display: inline;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+    to right,
+    transparent,
+    #ffd90009 25%,
+    #ffd9001d 50%,
+    #ffd90049 75%,
+    #ffd700 95%,
+    #fff3b0
+  );
+  animation: animate 4s cubic-bezier(0.37, 0.74, 0.37, 0.09) infinite;
+  -webkit-animation: animate 4s cubic-bezier(0.37, 0.74, 0.37, 0.09) infinite;
+}
+
+.card span:nth-child(1)::after {
+  content: "";
+  position: absolute;
+  inset: -0.25em;
+  background: linear-gradient(
+    to right,
+    transparent,
+    #ffd90009 25%,
+    #ffd90023 50%,
+    #ffd90030 75%,
+    #ffd90052 95%,
+    #fff3b0
+  );
+  filter: blur(0.5em);
+  z-index: -1;
+}
+
+@-webkit-keyframes animate {
+  0% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
   }
-  a:hover {
-    color: #747bff;
+  100% {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@keyframes animate {
+  0% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+}
+
+.svg-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0%;
+  padding: 0%;
+}
+
+.svg-animation {
+  display: inline;
+  width: 15%;
+  stroke-width: 0%;
+  height: auto;
+  padding: 1vw;
+}
+
+@-webkit-keyframes shadow {
+  0% {
+    -webkit-filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+    filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+  }
+  25% {
+    -webkit-filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+    filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+  }
+  50% {
+    -webkit-filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7));
+    filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7));
+  }
+  60% {
+    -webkit-filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7));
+    filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7));
+  }
+  70% {
+    -webkit-filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+    filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+  }
+  100% {
+    -webkit-filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+    filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+  }
+}
+
+@keyframes shadow {
+  0% {
+    filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+  }
+  25% {
+    filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+  }
+  50% {
+    filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7));
+  }
+  60% {
+    filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7));
+  }
+  70% {
+    filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+  }
+  100% {
+    filter: drop-shadow(0 0 0px rgba(0, 0, 0, 0.7));
+  }
+}
+
+@-webkit-keyframes rotate-gradient {
+  0% {
+    stop-color: rgb(0, 0, 0);
+  }
+  25% {
+    stop-color: rgb(0, 0, 0);
+  }
+  50% {
+    stop-color: rgb(255, 215, 0);
+  }
+  60% {
+    stop-color: rgb(255, 215, 0);
+  }
+  70% {
+    stop-color: rgb(0, 0, 0);
+  }
+  100% {
+    stop-color: rgb(0, 0, 0);
+  }
+}
+
+@keyframes rotate-gradient {
+  0% {
+    stop-color: rgb(0, 0, 0);
+  }
+  25% {
+    stop-color: rgb(0, 0, 0);
+  }
+  50% {
+    stop-color: rgb(255, 215, 0);
+  }
+  60% {
+    stop-color: rgb(255, 215, 0);
+  }
+  70% {
+    stop-color: rgb(0, 0, 0);
+  }
+  100% {
+    stop-color: rgb(0, 0, 0);
+  }
+}
+
+.textBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 30vh;
+  font-size: 3rem;
+  color: white;
+}
+
+.dot {
+  display: inline;
+  font-family: "Honk", system-ui;
+  font-weight: 800;
+  font-size: 3rem;
+  animation: bounce 0.3s ease infinite alternate;
+}
+
+@keyframes bounce {
+  100% {
+    transform: translateY(-6px);
+  }
+}
+
+.dot:nth-child(3) {
+  animation-delay: 0.1s;
+}
+
+.dot:nth-child(4) {
+  animation-delay: 0.2s;
+}
+
+/*  */
+@media screen and (max-width: 768px) {
+  .theme-button,
+  .evenboxinner,
+  .lft {
+    font-size: 0.8em;
+  }
+
+  .textBox {
+    font-size: 1rem;
+  }
+
+  .dot {
+    font-size: 1rem;
+  }
+  .box {
+    margin: 5px;
+    width: 175px;
   }
 }
